--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.battery.bms.activity.CurrentState"></activity>
+        <activity android:name="com.battery.bms.activity.CurrentState" />
+        <activity android:name="com.battery.bms.activity.ParameterRepair"></activity>
     </application>
 
 </manifest>
