--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,16 +23,14 @@ android {
 }
 
 
-
-
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
 //    compile project(':circleprogress')
     dependencies {
